# zlog_test

base/: zlog_utils.cpp  zlog_utils.h
src/: CMakeLists.txt  clean.sh  test_hello.c  zlog_test
